--- a/style.css
+++ b/style.css
@@ -208,14 +208,21 @@ img:hover {
   color: var(--secondary-color);
   text-align: center;
 }
-.portfolio{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, auto);
-  gap: 20px;
+.portfolio {
   padding: 20px;
   margin: 20px auto;
+  text-align: center;
+}
 
+.portfolio h3 {
+  margin-bottom: 20px;
+  color: var(--secondary-color);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
 .portfolio img{
   max-width: 100%;
